# cargo-generate-all

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cargo-generate.toml
crates/api/: .dockerignore  Cargo.toml  Dockerfile  README.md
crates/api/src/: main.rs
crates/cli/: .gitignore  Cargo.toml
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
