[package]
name = "{{project-name}}-api"
version = "0.1.0"
description = "{{description}}"
authors = ["{{authors}}"]
edition = "{{rust_edition}}"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/{{github_user}}/{{project-name}}"
repository = "https://github.com/{{github_user}}/{{project-name}}"
keywords = ["api", "{{project-name}}"]
categories = [""]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
{{project-name}} = { path = "../lib" }
actix-web = "4"
env_logger = "0.9.0"
json = "0.12"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
