[package]
name = "{{project-name}}-cli"
version = "0.1.0"
description = "{{description}}"
authors = ["{{authors}}"]
edition = "{{rust_edition}}"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/{{github_user}}/{{project-name}}"
repository = "https://github.com/{{github_user}}/{{project-name}}"
keywords = ["cli", "{{project-name}}"]
categories = ["command-line-utilities", "command-line-interface", "utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
{{project-name}} = { path = "../lib" }
anyhow = "*"
clap = { version = "3", features = ["derive", "env"] }
reqwest = { version = "*", features = ["json"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
