[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{description}}"
authors = ["{{authors}}"]
edition = "{{rust_edition}}"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/{{github_user}}/{{project-name}}"
repository = "https://github.com/{{github_user}}/{{project-name}}"
keywords = ["{{project-name}}"]
categories = ["api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "*"
reqwest = { version = "*", features = ["json"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
